sonarqube/postgress-deploy-svc-cm.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgress
  namespace: sonar
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgress
  selector:
    app: postgress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgress
  namespace: sonar
  labels:
    app: postgress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgress
  template:
    metadata:
      labels:
        app: postgress
    spec:
      securityContext:
        fsGroup: 2000 
      containers:
      - name: postgresss
        image: bitnami/postgresql
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgress
          mountPath: /bitnami/postgresql
      volumes:
      - name: postgress
        persistentVolumeClaim:
          claimName: postgress-pvc
