sonarqube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sonar
  namespace: sonar
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - sona.sgasimov.com
      secretName: my-fancy-certs
  rules:
  - host: sona.sgasimov.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar
          servicePort: 9000
